Dodato ono sto je nestalo posle merge

--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -16,8 +16,8 @@
         </div> -->
         <div class="form">
             <mat-form-field>
-                <input type="text" matInput placeholder="Product Name" (input)="getProducts()" [matAutocomplete]="auto"
-                    [(ngModel)]="data.productName" name="productName" list="this.SearchResults"
+                <input type="text" matInput placeholder="Select product from list" (input)="getProducts()"
+                    [matAutocomplete]="auto" [(ngModel)]="data.productName" name="productName" list="this.SearchResults"
                     [disabled]="flag === 3 || flag===4" required formControlName="productName" />
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayWith"
                     (optionSelected)="changeProduct($event)">
@@ -30,10 +30,10 @@
                 </mat-error>
             </mat-form-field>
             <div *ngIf="isAutocompleteLoading"
-            style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
-            <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
-            </mat-progress-spinner>
-          </div>
+                style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+                <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+                </mat-progress-spinner>
+            </div>
         </div>
         <div class=" form">
             <mat-form-field>
@@ -41,7 +41,7 @@
                     formControlName="quantity" [disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
-     <!--   <div class="form">
+        <!--   <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Expiry Date" [(ngModel)]="data.expiryDate" name="expiryDate"
                     formControlName="expiryDate" [disabled]="flag === 3 || flag===4" required />
@@ -49,11 +49,12 @@
         </div>-->
         <mat-form-field appearance="fill">
             <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker" [(ngModel)]="data.expiryDate" name="date">
-            <mat-hint>MM/DD/YYYY</mat-hint>
+            <input matInput [matDatepicker]="picker" [(ngModel)]="data.expiryDate" name="date"
+                formControlName="expiryDate">
+            <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
+        </mat-form-field>
 
         <div class="form">
             <mat-form-field>
@@ -77,10 +78,10 @@
             <button mat-button class="test" *ngIf="flag === 3" type="submit" (click)="sold()">Sold</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
             <div *ngIf="isLoading"
-            style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
-            <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
-            </mat-progress-spinner>
-          </div>
+                style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+                <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+                </mat-progress-spinner>
+            </div>
         </div>
     </form>
 </div>
