--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -18,7 +18,7 @@
             <mat-form-field>
                 <input type="text" matInput placeholder="Select product from list" (input)="getProducts()"
                     [matAutocomplete]="auto" [(ngModel)]="data.productName" name="productName" list="this.SearchResults"
-                    [disabled]="flag === 3 || flag===4" required formControlName="productName" />
+                    [attr.disabled]="flag === 3 || flag===4" required formControlName="productName" />
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayWith"
                     (optionSelected)="changeProduct($event)">
                     <mat-option *ngFor="let option of searchResults" [value]="option">
@@ -38,7 +38,7 @@
         <div class=" form">
             <mat-form-field>
                 <input matInput placeholder="Quantity" [(ngModel)]="data.quantity" name="quantity"
-                    formControlName="quantity" [disabled]="flag === 3 || flag===4" required />
+                    formControlName="quantity" [attr.disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
         <!--   <div class="form">
@@ -59,13 +59,13 @@
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Suggested Discount" [(ngModel)]="data.discount" name="discount"
-                    formControlName="discount" [disabled]="flag === 3 || flag===4" required />
+                    formControlName="discount" [attr.disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Comment" [(ngModel)]="data.comment" name="comment"
-                    formControlName="comment" [disabled]="flag === 3 || flag===4" required />
+                    formControlName="comment" [attr.disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
 
