--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -18,7 +18,7 @@
       <img src="../../../assets/belo.png" width="50px" height="50px"
         style="margin-top:15px; float:left; margin-left:20px;">
     </p>
-    <div style="justify-content: center;margin-right: 50px;">STORE CHECK</div>
+    <div style="justify-content: center;margin-right: 50px;" [routerLink]="['/chooseObject/addStoreCheck']">STORE CHECK</div>
   </div>
 
   <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/positions']">
