--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -89,6 +89,21 @@
         <mat-cell *matCellDef="let row">{{ row.retailerName }}</mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="product">
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Product</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.productIdCompany }}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="startDate">
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Product</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.dateStart | date:'dd/MM/yyyy' }}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="endDate">
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Product</mat-header-cell>
+        <mat-cell *matCellDef="let row">{{ row.dateEnd | date:'dd/MM/yyyy' }}</mat-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
 </mat-table>
