--- a/src/app/components/product-category/product-category.component.html
+++ b/src/app/components/product-category/product-category.component.html
@@ -26,5 +26,5 @@
         <mat-progress-spinner class="mat-spinner-color" mode="indeterminate">
         </mat-progress-spinner>
     </div>
-    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No retailers</mat-toolbar>
+    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No product categories</mat-toolbar>
 </div>
