--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -38,6 +38,11 @@
             </a>
         </mat-nav-list>
         <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['promoEvaluator']">
+                <mat-icon class="nav-icon">assignment_turned_in</mat-icon>Promo Evaluators
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
             <a mat-list-item class="nav-list-item" [routerLink]="['feedbackCategory']">
                 <mat-icon class="nav-icon">ballot</mat-icon>Feedback Categories
             </a>
