--- a/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.html
+++ b/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.html
@@ -2,7 +2,7 @@
     <h3 mat-dialog-title *ngIf="flag == 1">Add store check receivers</h3>
     <h3 mat-dialog-title *ngIf="flag == 2">Edit store check receivers</h3>
     <form class="mat-dialog-content" #formControl="ngForm">
-        <div class="form">
+        <!-- <div class="form">
             <mat-form-field>
                 <input matInput placeholder="General director" [(ngModel)]="data.generalDirector" name="generalDirector" required />
             </mat-form-field>
@@ -26,20 +26,20 @@
             <mat-form-field>
                 <input matInput placeholder="Manager" [(ngModel)]="data.manager" name="manager" required />
             </mat-form-field>
-        </div>
+        </div> -->
 
         <div mat-dialog-actions class="wrap">
 
             <button mat-button class="test" *ngIf="flag == 1" type="submit" (click)="add()"
-            [disabled]="!formControl.valid">Ok</button>
+                [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="test" *ngIf="flag == 2" type="submit" (click)="update()"
-            [disabled]="!formControl.valid">Ok</button>
+                [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
             <div *ngIf="isLoading"
-        style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
-        <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
-        </mat-progress-spinner>
-      </div>
+                style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+                <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+                </mat-progress-spinner>
+            </div>
         </div>
     </form>
 </div>
