--- a/src/app/components/store-check-receiver/store-check-receiver.component.css
+++ b/src/app/components/store-check-receiver/store-check-receiver.component.css
@@ -36,6 +36,14 @@
     bottom: 8px;
 }
 
+.whitetext {
+    color: white;
+}
+
+.mat-header-cell {
+    background: #56baed;
+}
+
 .column-name {
     font-size: 16px;
 }
