--- a/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.html
+++ b/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.html
@@ -1,7 +1,20 @@
 <div class="container">
     <h3 mat-dialog-title *ngIf="flag == 1">Add store check receivers</h3>
     <h3 mat-dialog-title *ngIf="flag == 2">Edit store check receivers</h3>
+    <h3 mat-dialog-title *ngIf="flag == 3">Delete store check receivers</h3>
     <form class="mat-dialog-content" #formControl="ngForm">
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="Name" [(ngModel)]="data.name" name="name" required
+                    [disabled]="flag == 2 || flag == 3" />
+            </mat-form-field>
+        </div>
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="Email" [(ngModel)]="data.email" name="email" required
+                    [disabled]="flag == 3" />
+            </mat-form-field>
+        </div>
         <!-- <div class="form">
             <mat-form-field>
                 <input matInput placeholder="General director" [(ngModel)]="data.generalDirector" name="generalDirector" required />
@@ -29,11 +42,11 @@
         </div> -->
 
         <div mat-dialog-actions class="wrap">
-
             <button mat-button class="test" *ngIf="flag == 1" type="submit" (click)="add()"
                 [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="test" *ngIf="flag == 2" type="submit" (click)="update()"
                 [disabled]="!formControl.valid">Ok</button>
+            <button mat-button class="test" *ngIf="flag == 3" type="submit" (click)="delete()">Delete</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
             <div *ngIf="isLoading"
                 style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
