--- a/src/app/components/promo-evaluator/promo-evaluator.component.html
+++ b/src/app/components/promo-evaluator/promo-evaluator.component.html
@@ -2,9 +2,13 @@
 
     <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
-        <ng-container matColumnDef="promoEvaluatorName">
-            <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Promo Evaluator</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{ row.Username }}</mat-cell>
+        <ng-container matColumnDef="Username">
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Username</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{ row.username }}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Rebate">
+            <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Rabate</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{ row.rebate }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="actions">
@@ -15,7 +19,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let row; let i=index">
                 <button mat-icon-button color="primary">
-                    <mat-icon (click)="openDialog(3,row.Username)"> delete </mat-icon>
+                    <mat-icon (click)="openDialog(3,row.username,row.rebate)"> delete </mat-icon>
                 </button>
             </mat-cell>
         </ng-container>
