--- a/src/app/components/promo/promo.component.css
+++ b/src/app/components/promo/promo.component.css
@@ -15,6 +15,7 @@
     color: #56baed;
 }
 
-.mat-mdc-radio-button~.mat-mdc-radio-button {
+.mat-radio-button {
     margin-left: 16px;
+    margin-bottom: 30px;
 }
