--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -87,6 +87,7 @@
     <mat-radio-button value="FOR_CONFIRMATION" checked="true">For confirmation</mat-radio-button>
     <mat-radio-button value="ACTUAL">Actual</mat-radio-button>
     <mat-radio-button value="FINISHED">Finished</mat-radio-button>
+    <mat-radio-button value="MY_CONFIRMATION" *ngIf="isEvaluator">My confirmation</mat-radio-button>
 </mat-radio-group>
 
 <div class="table mat-elevation-z8">
@@ -98,7 +99,7 @@
 
         <ng-container matColumnDef="product">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Product</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{ row.productIdCompany }}</mat-cell>
+            <mat-cell *matCellDef="let row">{{ row.productName }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="startDate">
@@ -126,7 +127,7 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
-    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No data</mat-toolbar>
+    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No promos</mat-toolbar>
     <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSize]="count" [pageSizeOptions]="[5, 10, 25, 100]"
         [length]="length" (page)="loadDataOnPageEvent($event)">
     </mat-paginator>
