--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 * {
     margin: 0;
     padding: 0;
@@ -19,5 +20,14 @@
 }
 
 .mat-dialog-container {
-  border-radius: 20px !important;
+    border-radius: 20px !important;
+}
+
+.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+    border-color: #56baed;
+}
+
+.mat-radio-button.mat-accent .mat-radio-inner-circle {
+    color: #56baed;
+    background-color: #56baed;
 }
