--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -1,88 +1,3 @@
-<form #formControl="ngForm">
-    <mat-form-field appearance="fill">
-        <mat-label>Retailer</mat-label>
-        <mat-select (selectionChange)="selectRetailer($event)" required name="retailer">
-            <mat-option *ngFor="let retailer of retailers" [value]="retailer">
-                {{retailer.retailerName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Product</mat-label>
-        <mat-select (selectionChange)="selectProduct($event)" required name="product">
-            <mat-option *ngFor="let product of products" [value]="product">
-                {{product.productName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Choose start date</mat-label>
-        <input matInput [matDatepicker]="startDatePicker" (dateInput)="selectStartDate($event)" readonly
-            [min]="currentDate" [max]="endDate" required name="startDate">
-        <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-        <mat-datepicker #startDatePicker></mat-datepicker>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Choose end date</mat-label>
-        <input matInput [matDatepicker]="endDatePicker" (dateInput)="selectEndDate($event)" readonly
-            [min]="startDate ? startDate : currentDate" required name="endDate">
-        <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-        <mat-datepicker #endDatePicker></mat-datepicker>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Rebate</mat-label>
-        <input type="number" matInput [(ngModel)]="rebate" required name="rebate">
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Regular sale</mat-label>
-        <input type="number" matInput [(ngModel)]="regularSale" required name="regularSale">
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Type</mat-label>
-        <mat-select (selectionChange)="selectPromoType($event)" required name="type">
-            <mat-option *ngFor="let promoType of promoTypes" [value]="promoType">
-                {{promoType}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Ads cost</mat-label>
-        <input type="number" matInput [(ngModel)]="adsCost" required name="adsCost">
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Promo sale</mat-label>
-        <input type="number" matInput [(ngModel)]="promoSale" required name="promoSale">
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Promo cost</mat-label>
-        <input type="number" matInput [(ngModel)]="promoCost" required name="promoCost">
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Price</mat-label>
-        <input type="number" matInput [(ngModel)]="price" required name="price">
-    </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label>Result sale</mat-label>
-        <input type="number" matInput [(ngModel)]="resultSale" name="resultSale">
-    </mat-form-field>
-
-    <button mat-stroked-button color="primary" type="submit" [disabled]="!formControl.valid"
-        (click)="createPromotion()">Create promotion</button>
-</form>
-
 <mat-radio-group aria-label="Select an option" (change)="changeType($event)">
     <mat-radio-button value="FOR_CONFIRMATION" checked="true">For confirmation</mat-radio-button>
     <mat-radio-button value="ACTUAL">Actual</mat-radio-button>
@@ -113,12 +28,17 @@
         </ng-container>
 
         <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef></mat-header-cell>
-            <mat-cell *matCellDef="let row; let i=index">
-                <button mat-stroked-button color="primary" (click)="confirmPromo(row)">Confirm
-                    <!-- <mat-icon area-label="Confirm">check</mat-icon> -->
+            <mat-header-cell *matHeaderCellDef>
+                <button mat-icon-button color="primary">
+                    <mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" (click)="deletePromo(row.promoId)">
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row; let i=index">
+                <button mat-stroked-button color="primary"
+                    (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">Confirm
+                </button>
+                <button mat-icon-button color="primary"
+                    (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">
                     <mat-icon area-label="Delete">delete</mat-icon>
                 </button>
             </mat-cell>
