--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -34,7 +34,7 @@
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let row; let i=index">
-                <button mat-stroked-button color="primary"
+                <button mat-stroked-button color="primary" *ngIf="type === 'MY_CONFIRMATION'"
                     (click)="openDialog(2, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">Confirm
                 </button>
                 <button mat-icon-button color="primary"
