--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -29,7 +29,7 @@
 
         <ng-container matColumnDef="actions">
             <mat-header-cell *matHeaderCellDef>
-                <button mat-icon-button color="primary">
+                <button mat-icon-button color="primary" *ngIf="type === 'FOR_CONFIRMATION'">
                     <mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
                 </button>
             </mat-header-cell>
@@ -40,6 +40,10 @@
                 <button mat-icon-button color="primary"
                     (click)="openDialog(3, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">
                     <mat-icon area-label="Delete">delete</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" *ngIf="!row.resultSale"
+                    (click)="openDialog(4, row.promoId, row.retailerName, row.productName, row.dateStart, row.dateEnd, row.rebate, row.regularSale, row.type, row.adsCost, row.promoSale, row.promoCost, row.price, row.resultSale)">
+                    <mat-icon area-label="Edit">edit</mat-icon>
                 </button>
             </mat-cell>
         </ng-container>
